--- a/main.html
+++ b/main.html
@@ -2,12 +2,27 @@
 
 <html>
 
-<head>
+<!-- <head> -->
+<!-- 	<link rel="stylesheet" href="styles.css"> -->
+<!-- </head> -->
+
+<body>
+	<!-- the entire body must be written by student -->
+	<head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<img src='https://media.istockphoto.com/id/1213550611/photo/spaceman-in-the-surf.webp?b=1&s=170667a&w=0&k=20&c=B704uzMq1hed5oBHqySVbbK88-9i_awW6eMf1gsuSQ0=' alt='movie-poster' class='moviePic'><br>
+	<description>Movie Poster</description>
+	<p class='movieDetail'>Movie Description</p>
 	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
     <script type="text/javascript" src="./script.js">
 </script>
 
